<resources>
    <string name="app_name">Experiment-Automata</string>
    <!--  a string array of experiment types  -->
    <string-array name="experiment_types">
        <item>Count</item>
        <item>NaturalCount</item>
        <item>Binomial</item>
        <item>Measurement</item>
    </string-array>
    <!--  strings for create experiment fragment  -->
    <string name="require_location">Require Location</string>
    <string name="accept_new_results">Accept New Results</string>
    <string name="description">Description</string>
    <string name="minimum_number_of_trials">Minimum Number of Trials</string>
    <string name="trial_type">Trial Type</string>
    <string name="title_activity_navigation">Experiment Automata</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Experiment Automata</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_owned_experiments">My Experiments</string>
    <string name="menu_subscriptions">My Subscriptions</string>
    <string name="menu_published">Published Experiments</string>
    <string name="menu_search">Search Results</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_experiment_details">Experiment Details</string>
    <string name="search">Search</string>

    <string name="search_hint">Search for Experiments</string>
    <string name="histogram_subtitle">Histogram</string>
    <string name="statistics_subtitle">Statistics</string>
    <string name="quartiles">Quartiles</string>
    <string name="median">Median</string>
    <string name="mean">Mean</string>
    <string name="stdev">Standard Deviation</string>
    <string name="results">Results</string>
    <string name="trails">Trials</string>

    <string name="qr_code">QR Code</string>
    <string name="value">Value</string>
    <string name="back">BACK</string>
    <string name="todo">TODO</string>

    <!-- Strings to make a question fragment -->
    <string name="frag_add_edit_question_view_val">Add Question</string>
    <string name="frag_add_edit_question_input_hint_val">Question</string>
    <string name="count">Count</string>
    <string name="measurement">Measurement</string>
    <string name="no_trials">Not Enough Trials</string>

    <string name="profile_contact">Contact Information</string>

    <string name="add_location_dialog_latitude">Latitude</string>
    <string name="add_location_dialog_longitude">Longitude</string>
    <string name="add_location_dialog_default_btn">Revert to Current</string>

    <string name="map_point_view_experiment_no_loc_err">This Experiment Does Not Have Location Trials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
