<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_perm_contact_calendar"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_owned_experiments"
            android:icon="@drawable/ic_baseline_assessment"
            android:title="@string/menu_owned_experiments" />
        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_baseline_assessment"
            android:title="@string/menu_subscriptions" />
        <item
            android:id="@+id/nav_published"
            android:icon="@drawable/ic_baseline_assessment"
            android:title="@string/menu_published" />
        <item
            android:id="@+id/nav_qr_scan"
            android:icon="@drawable/ic_baseline_assessment"
            android:title="Scan QR" />
    </group>
</menu>