<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment">

    <TextView
        android:id="@+id/statistics_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_subtitle"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_subtitle"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quartiles_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quartiles" />

            <TextView
                android:id="@+id/quartiles_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="q1: x, q3: y"
                android:textColor="?android:attr/textColorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/median_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/median" />

            <TextView
                android:id="@+id/median_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx.xxx"
                android:textColor="?android:attr/textColorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mean_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean" />

            <TextView
                android:id="@+id/mean_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx.xxx"
                android:textColor="?android:attr/textColorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/stdev_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stdev" />

            <TextView
                android:id="@+id/stdev_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx.xxx"
                android:textColor="?android:attr/textColorPrimary" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>