<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trials.add.AddMeasurementTrialFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/measurement_trial_experiment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/add_measurement_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="28dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_qr_code_scanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_measurement_qr_generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_qr_code_24"
        app:layout_constraintBottom_toTopOf="@+id/add_measurment_trial_revert_loc_bttn"
        app:layout_constraintEnd_toStartOf="@+id/add_measurement_qr_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/ic_baseline_qr_code_24" />

    <EditText
        android:id="@+id/add_measurement_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/measurement"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/measurement_trial_experiment_description"
        app:layout_constraintTop_toBottomOf="@+id/measurement_trial_experiment_description" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="376dp"
        android:layout_height="470dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_measurement_value">

        <org.osmdroid.views.MapView
            android:id="@+id/measurement_trial_experiment_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/add_measurment_trial_revert_loc_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/add_location_dialog_default_btn"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measurement_trial_experiment_description" />

</androidx.constraintlayout.widget.ConstraintLayout>